Add PDF searcher GUI and update .gitignore
Introduces app/PDFsearcher.py, a Tkinter-based GUI tool for searching PDF reports for specific medical terms and generating a summary report. Updates .gitignore to exclude build artifacts and spec files. Adds a compiled ReportAnalyzer.exe to app/dist.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 data-fetching/credentials.json
 data-fetching/token.json
 data-fetching/Sorting/skipped_reports.txt
+/app/build
+app/ReportAnalyzer.spec
