Update paths and add report splitting script
Changed default folder paths in impression-extractor-lucknow.py and local-search.py to use a new directory. Updated output and index filenames in local-search.py. Added split.py script to split large report files into smaller chunks. Updated .gitignore to exclude a new text file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ data-fetching/Sorting/skipped_reports.txt
 /app/build
 app/ReportAnalyzer.spec
 /deep-reports
+data-cleaning/Structure-analysis/Flexible-analysis/Phase-two/old-script-appendicitis.txt
